# TG-Deleter

./: .dockerignore  .gitattributes  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_STATUS.txt  GIT_FINAL_INSTRUCTIONS.md  LICENSE  PRE_PUSH_CHECKLIST.md  README.md  README_DEPLOYMENT.md  RELEASE_NOTES.md  SECURITY.md  accounts_profiles.json  api_config.example.json  build.ps1  build_exe.py  core.py  gui.py  gui_out.txt  pyproject.toml  requirements.txt  run.bat  run_cli.bat  run_cli_check.txt  run_gui.bat  run_project.bat  script.py
.github/workflows/: tests.yml
assets/: make_icon.py
tests/: __init__.py  test_core.py
ui/: __init__.py  app.py  cache_export.py  chat_card.py  export_frame.py  logging_config.py  login_dialog.py  messages.py  navigator.py  places_frame.py  posts_frame.py  queues.py  settings_frame.py  sidebar_frame.py  theme.py  tooltip.py  tray.py  worker.py
