[project]
name = "tg-deleter"
version = "0.8.0b1"
description = "Desktop utility for managing and deleting your Telegram messages"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [
    {name = "TG Deleter contributors"},
]
keywords = ["telegram", "pyrogram", "desktop", "export", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "pyrogram>=2.0.0",
    "customtkinter>=5.2.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "pystray>=0.19.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]
performance = [
    "TgCrypto>=1.2.5",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
tg-deleter = "script:main"

[project.urls]
Homepage = "https://github.com/therudywolf/TG-Deleter"
Repository = "https://github.com/therudywolf/TG-Deleter"
Issues = "https://github.com/therudywolf/TG-Deleter/issues"

[tool.setuptools]
py-modules = ["core", "gui", "script", "build_exe"]
packages = ["ui"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
